# speech-assistant-openai-realtime-api-python

./: .dockerignore  .gitignore  Dockerfile  Readme.md  docker-compose.dev.yml  docker-compose.yml  main.py  moving_agent.py  pyproject.toml  requirements.txt  test_moving_agent.py
docker/: .dockerignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml
docker/call_log/: 1c091c97-1107-49d7-bf7a-4c30df901560_transcript.txt  23f15f5d-8d5b-4d5b-bf32-38dc024d9feb_transcript.txt  428f8600-7bd3-4a2a-a962-a6078afd9f77_transcript.txt  460f14b7-e454-4abd-9043-9b8fb4b84b18_transcript.txt  4f2a652d-a8f9-45f3-a9c2-0e543c19296c_complete.json  4f2a652d-a8f9-45f3-a9c2-0e543c19296c_transcript.txt  4f5ba4d7-eeb7-4b68-826d-4bdeca5abb9d_transcript.txt  54f3ba22-552b-4aff-a63b-d48d1a1ae7d7_transcript.txt  58652465-739f-45a1-96dc-08da1f045f0d_transcript.txt  5edf72ff-7575-4223-bb89-39879b92c00e_transcript.txt  635d8169-7a4e-4c0c-8da8-f39d362952db_complete.json  635d8169-7a4e-4c0c-8da8-f39d362952db_transcript.txt  6c509a43-b079-41b8-be54-5f08d67fd399_transcript.txt  6df53439-8424-4eb3-8999-27e6ecc6effd_transcript.txt  852148aa-d763-4aef-838a-1015c1f726f8_transcript.txt  8e83b187-e2a3-4545-a8d0-51ad42103370_transcript.txt  a2bba062-3a20-4c78-b799-ce0a9a8854d6_complete.json  a2bba062-3a20-4c78-b799-ce0a9a8854d6_transcript.txt  a37eecbe-2388-4610-ab31-c652bb6b23a5_transcript.txt  aba36bbc-c154-4ad5-ab77-06f922d5d3ea_transcript.txt  (+8 more)
moving_requests/: f0c65f6d-f4c9-41b5-8761-5dd154be072b.json
scripts/: setup.sh
static/: app.js  pcm-encoder-worklet.js
templates/: index.html
(+7 files in other folders)
