[project]
name = "speech-assistant-openai-realtime-api-python"
version = "0.1.0"
description = "A real-time speech assistant built with FastAPI and OpenAI's Realtime API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]

[project.scripts]
speech-assistant = "speech_assistant.main:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
